compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__bit_strings__bit_string_declare_and_use_var.snap
---
source: compiler-core/src/erlang/tests/bit_strings.rs
assertion_line: 112
expression: "pub fn go(x) {\n  let <<name_size:8, name:binary-size(name_size)>> = x\n  name\n}"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars]).

-export([go/1]).

-spec go(bitstring()) -> bitstring().
go(X) ->
    <<Name_size:8, Name:Name_size/binary>> = X,
    Name.

