compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__bit_strings__bit_string_discard1.snap
---
source: compiler-core/src/erlang/tests/bit_strings.rs
assertion_line: 98
expression: "\npub fn bitstring_discard(x) -> Bool {\n case x {\n  <<_discardme:utf8, rest:binary>> -> True\n   _ -> False\n }\n}\n                    "
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars]).

-export([bitstring_discard/1]).

-spec bitstring_discard(bitstring()) -> boolean().
bitstring_discard(X) ->
    case X of
        <<_/utf8, Rest/binary>> ->
            true;

        _ ->
            false
    end.

