compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__bit_strings__bit_strings-2.snap
---
source: compiler-core/src/erlang/tests/bit_strings.rs
expression: "pub fn x() { 2 }\nfn main() {\n  let a = -1\n  let b = <<a:unit(2)-size(a * 2), a:size(3 + x())-unit(1)>>\n\n  b\n}\n"

---
-module(the_app).
-compile(no_auto_import).

-export([x/0]).

-spec x() -> integer().
x() ->
    2.

-spec main() -> bitstring().
main() ->
    A = -1,
    B = <<A:(lists:max([(A * 2), 0]))/unit:2,
          A:(lists:max([(3 + x()), 0]))/unit:1>>,
    B.

