compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__bit_strings__bit_strings-5.snap
---
source: compiler-core/src/erlang/tests/bit_strings.rs
assertion_line: 47
expression: "fn x() { 1 }\npub fn main() {\n  let a = <<x():int>>\n  a\n}\n"
---
-module(the_app).
-compile(no_auto_import).

-export([main/0]).

-spec x() -> integer().
x() ->
    1.

-spec main() -> bitstring().
main() ->
    A = <<(x())/integer>>,
    A.

