compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__bit_strings__bit_strings.snap
---
source: compiler-core/src/erlang/tests/bit_strings.rs
expression: "pub fn main() {\n  let a = 1\n  let simple = <<1, a>>\n  let complex = <<4:int-big, 5.0:little-float, 6:native-int>>\n  let <<7:2, 8:size(3), b:binary-size(4)>> = <<1>>\n  let <<c:8-unit(1), d:binary-size(2)-unit(2)>> = <<1>>\n\n  simple\n}\n"

---
-module(the_app).
-compile(no_auto_import).

-export([main/0]).

-spec main() -> bitstring().
main() ->
    A = 1,
    Simple = <<1, A>>,
    Complex = <<4/integer-big, 5.0/little-float, 6/native-integer>>,
    <<7:2, 8:3, B:4/binary>> = <<1>>,
    <<C:8/unit:1, D:2/binary-unit:2>> = <<1>>,
    Simple.

