compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__bit_strings__bit_strings2.snap
---
source: compiler-core/src/erlang/tests/bit_strings.rs
assertion_line: 46
expression: "pub fn main() {\n  let a = 1\n  let <<b, 1>> = <<1, a>>\n  b\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars]).

-export([main/0]).

-spec main() -> integer().
main() ->
    A = 1,
    <<B, 1>> = <<1, A>>,
    B.

